2008-08-11  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker/tracker-unique.c: Added new file.
	
2008-08-11  Ivan Frade  <ivan.frade@nokia.com>

	New methods GetSum, GetCount, GetUniqueValues. Patch by Mikael
	Ottela.

	* data/dbus/tracker-metadata.xml
	* src/trackerd/tracker-metadata.[ch]
	* src/trackerd/tracker-rdf-query.[ch]: Daemon side implementation.

	* src/libtracker/Makefile.am
	* src/libtracker/tracker.[ch]: Added methods in the library and
	created a tracker-unique program.

	
2008-08-11  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-dbus.c
	(tracker_dbus_query_result_to_ptr_array): Fixed memory leak and
	handle NULL content in a column.
	* tests/libtracker-db/tracker-db-dbus-test.c: Added tests for
	tracker_dbus_query_result_to_ptr_array
	
2008-08-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: (tracker_monitor_init),
	(monitor_event_cb): Improve the last commit so we use the _CHANGED
	event for FAM only because it is dumb and doesn't allow GIO to
	signal _CHANGES_DONE.

2008-08-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: (monitor_event_cb): Don't signal
	files to be reindexed on the _CHANGED event. Only on CHANGES_DONE
	which is for WRITE_CLOSE events.

2008-08-08  Martyn Russell  <martyn@imendio.com>

	* src/libstemmer/Makefile.am: 
	* src/trackerd/Makefile.am:
	* src/tracker-indexer/Makefile.am: 
	* tests/libtracker-common/Makefile.am: Renamed .la to just
	libstemmer from libstemmer-private. 

	* src/libtracker-common/Makefile.am: Added libstemmer to the .la
	files we need so the tests don't fail to build.
 	
	* src/libtracker-common/tracker-language.c: Fixed include path for
	libstemmer. 
	
	* src/libtracker-common/tracker-utils.[ch]: 
	* src/trackerd/tracker-crawler.c:
	* src/tracker-indexer/tracker-indexer.c: Added throttle function
	we use in the indexer to a common place for the daemon to use too.
